making a little progress
