# models/resume_id.go
@@ -1,0 +1,38 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// ResumeID ID of resume to return
+//
+// swagger:model ResumeID
+type ResumeID strfmt.UUID
+
+// Validate validates this resume ID
+func (m ResumeID) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := validate.FormatOf("", "body", "uuid", strfmt.UUID(m).String(), formats); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this resume ID based on context it is used
+func (m ResumeID) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
