# restapi/operations/open/update_resume_responses.go
@@ -1,0 +1,194 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package open
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/ChristopherScot/resume/models"
+)
+
+// UpdateResumeOKCode is the HTTP code returned for type UpdateResumeOK
+const UpdateResumeOKCode int = 200
+
+/*
+UpdateResumeOK Resume updated
+
+swagger:response updateResumeOK
+*/
+type UpdateResumeOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.UUIDResponse `json:"body,omitempty"`
+}
+
+// NewUpdateResumeOK creates UpdateResumeOK with default headers values
+func NewUpdateResumeOK() *UpdateResumeOK {
+
+	return &UpdateResumeOK{}
+}
+
+// WithPayload adds the payload to the update resume o k response
+func (o *UpdateResumeOK) WithPayload(payload *models.UUIDResponse) *UpdateResumeOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update resume o k response
+func (o *UpdateResumeOK) SetPayload(payload *models.UUIDResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateResumeOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateResumeBadRequestCode is the HTTP code returned for type UpdateResumeBadRequest
+const UpdateResumeBadRequestCode int = 400
+
+/*
+UpdateResumeBadRequest Invalid input
+
+swagger:response updateResumeBadRequest
+*/
+type UpdateResumeBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.SimpleErrorResponse `json:"body,omitempty"`
+}
+
+// NewUpdateResumeBadRequest creates UpdateResumeBadRequest with default headers values
+func NewUpdateResumeBadRequest() *UpdateResumeBadRequest {
+
+	return &UpdateResumeBadRequest{}
+}
+
+// WithPayload adds the payload to the update resume bad request response
+func (o *UpdateResumeBadRequest) WithPayload(payload *models.SimpleErrorResponse) *UpdateResumeBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update resume bad request response
+func (o *UpdateResumeBadRequest) SetPayload(payload *models.SimpleErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateResumeBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateResumeNotFoundCode is the HTTP code returned for type UpdateResumeNotFound
+const UpdateResumeNotFoundCode int = 404
+
+/*
+UpdateResumeNotFound Resume not found
+
+swagger:response updateResumeNotFound
+*/
+type UpdateResumeNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.SimpleErrorResponse `json:"body,omitempty"`
+}
+
+// NewUpdateResumeNotFound creates UpdateResumeNotFound with default headers values
+func NewUpdateResumeNotFound() *UpdateResumeNotFound {
+
+	return &UpdateResumeNotFound{}
+}
+
+// WithPayload adds the payload to the update resume not found response
+func (o *UpdateResumeNotFound) WithPayload(payload *models.SimpleErrorResponse) *UpdateResumeNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update resume not found response
+func (o *UpdateResumeNotFound) SetPayload(payload *models.SimpleErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateResumeNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateResumeInternalServerErrorCode is the HTTP code returned for type UpdateResumeInternalServerError
+const UpdateResumeInternalServerErrorCode int = 500
+
+/*
+UpdateResumeInternalServerError General Failure
+
+swagger:response updateResumeInternalServerError
+*/
+type UpdateResumeInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.SimpleErrorResponse `json:"body,omitempty"`
+}
+
+// NewUpdateResumeInternalServerError creates UpdateResumeInternalServerError with default headers values
+func NewUpdateResumeInternalServerError() *UpdateResumeInternalServerError {
+
+	return &UpdateResumeInternalServerError{}
+}
+
+// WithPayload adds the payload to the update resume internal server error response
+func (o *UpdateResumeInternalServerError) WithPayload(payload *models.SimpleErrorResponse) *UpdateResumeInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update resume internal server error response
+func (o *UpdateResumeInternalServerError) SetPayload(payload *models.SimpleErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateResumeInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
